# ambient-expense-agent-kaggle

./: .gitignore  ARCHITECTURE.md  README.md
ambient-expense-agent/: Makefile  agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml
ambient-expense-agent/deployment/terraform/single-project/vars/: env.tfvars
ambient-expense-agent/expense_agent/: __main__.py  agent.py  agent_runtime_app.py  config.py  security.py  server.py
ambient-expense-agent/tests/eval/: eval_config.yaml  generate_traces.py
ambient-expense-agent/tests/eval/datasets/: basic-dataset.json
ambient-expense-agent/tests/integration/: test_agent.py  test_agent_runtime_app.py
ambient-expense-agent/tests/unit/: test_security.py
docs/: CODELABS.md
submission_frontend/: .gcloudignore  Dockerfile  README.md  pyproject.toml
submission_frontend/submission_frontend/: __init__.py  main.py
