[project]
name = "submission-frontend"
version = "0.1.0"
description = "Standalone FastAPI manager dashboard for the Ambient Expense agent."
authors = [
    {name = "Your Name", email = "your@email.com"},
]
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[agent-engines,evaluation]>=1.156.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
    "ruff>=0.4.6,<1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["submission_frontend"]
